[tool.poetry]
name = "cachy"
version = "0.3.0"
description = "Cachy provides a simple yet effective caching library."
license = "MIT"
authors = [
    "Sébastien Eustace <sebastien@eustace.io>"
]
readme = 'README.rst'
homepage = "https://github.com/sdispater/cachy"
repository = "https://github.com/sdispater/cachy"
keywords = ['cache']

packages = [
    {include = "cachy"},
    {include = "tests", format = "sdist"},
]

[tool.poetry.dependencies]
python = "^3.7"
redis = { version = "^3.3.6", optional = true }
python-memcached = { version = "^1.59", optional = true }
msgpack-python = { version = "^0.5", optional = true }

[tool.poetry.extras]
redis = ["redis"]
memcached = ["python-memcached"]
msgpack = ["msgpack-python"]

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^1.10.4"
flexmock = "^0.10.4"
fakeredis = "^1.8"
